--- a/.github/workflows/welcome-demo.yml
+++ b/.github/workflows/welcome-demo.yml
@@ -14,4 +14,4 @@ jobs:
     - name: List files in the repository
       run: |
         ls ${{ github.workspace }}
-    - run: echo "The job status is ${{ job.status }}
+    - run: echo "The job status is ${{ job.status }}"
